# bayan

./: CMakeLists.txt  cmd_line_parser.cpp  cmd_line_parser.h  main.cpp  tests.cpp  utility.cpp  utility.h
.github/workflows/: cmake.yml
bayan/: bayan.cpp  bayan.h  factory.h  file.cpp  file.h  hash.h  hash_crc32.cpp  hash_crc32.h  hash_md5.cpp  hash_md5.h
test_data/test_data_1/test_data_11/: test11.txt
test_data/test_data_1/test_data_11/test_data_111/: test1.txt  test111.txt  test111_1.txt
test_data/test_data_1/test_data_12/: test0.txt
test_data/test_data_2/test_data_21/: test21.txt
test_data/test_data_2/test_data_21/test_data_211/: test221.txt
test_data/test_data_2/test_data_22/: test_eq.txt
test_data/test_data_2/test_data_22/test_data_222/: test222.txt
